Source/WebKit/Shared/Cocoa/InsertTextOptions.cpp
@@ -32,6 +32,7 @@ void ArgumentCoder<WebKit::InsertTextOptions>::encode(Encoder& encoder, const We
 {
     encoder << options.registerUndoGroup;
     encoder << options.suppressSelectionUpdate;
+    encoder << options.processingUserGesture;
     encoder << options.editingRangeIsRelativeTo;
 }
 
@@ -41,6 +42,8 @@ Optional<WebKit::InsertTextOptions> ArgumentCoder<WebKit::InsertTextOptions>::de
     if (!decoder.decode(options.registerUndoGroup))
         return WTF::nullopt;
     if (!decoder.decode(options.suppressSelectionUpdate))
+        return WTF::nullopt;
+    if (!decoder.decode(options.processingUserGesture))
         return WTF::nullopt;
     if (!decoder.decode(options.editingRangeIsRelativeTo))
         return WTF::nullopt;
